# AnimLab

./: CMakeLists.txt  README.md
include/: application.hpp  body.hpp  chain.hpp  element.hpp  event.hpp  gui.hpp  leg.hpp  time.hpp  type.hpp  window.hpp
shadow_map_test/: CMakeLists.txt
shadow_map_test/shaders/: depth_map.vs  object.fs  object.vs
shadow_map_test/src/: main.cpp
src/: application.cpp  body.cpp  chain.cpp  event.cpp  gui.cpp  leg.cpp  main.cpp  window.cpp
